fix margin on small screens

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -25,6 +25,6 @@
 
 @media screen and (max-width: 1024px) {
     .card{
-        margin: 25px 25px 25px 25px !important;
+        margin: 25px 25px 25px 0px !important;
     }
 }
